--- a/index.html
+++ b/index.html
@@ -19,30 +19,175 @@
     </section>
 
     <section class="main-content">
-      <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+      <h1>
+<a id="awesome-go-patterns" class="anchor" href="#awesome-go-patterns" aria-hidden="true"><span class="octicon octicon-link"></span></a>awesome-go-patterns</h1>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p>A collection of Go design patterns/idioms</p>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<p>Current Patterns:</p>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p><strong>Creational Patterns</strong>:</p>
 
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<table>
+<thead>
+<tr>
+<th align="center">Pattern</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td align="center"><a href="abstract_factory.go">abstract_factory</a></td>
+<td>use a generic function with specific factories</td>
+</tr>
+<tr>
+<td align="center"><a href="borg.go">borg</a></td>
+<td>a singleton with shared-state among instances</td>
+</tr>
+<tr>
+<td align="center"><a href="builder.go">builder</a></td>
+<td>instead of using multiple constructors, builder object receives parameters and returns constructed objects</td>
+</tr>
+<tr>
+<td align="center"><a href="factory_method.go">factory_method</a></td>
+<td>delegate a specialized function/method to create instances</td>
+</tr>
+<tr>
+<td align="center"><a href="lazy_evaluation.go">lazy_evaluation</a></td>
+<td>lazily-evaluated property pattern in Go</td>
+</tr>
+<tr>
+<td align="center"><a href="pool.go">pool</a></td>
+<td>preinstantiate and maintain a group of instances of the same type</td>
+</tr>
+<tr>
+<td align="center"><a href="prototype.go">prototype</a></td>
+<td>use a factory and clones of a prototype for new instances (if instantiation is expensive)</td>
+</tr>
+</tbody>
+</table>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p><strong>Structural Patterns</strong>:</p>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<table>
+<thead>
+<tr>
+<th align="center">Pattern</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td align="center"><a href="3-tier.go">3-tier</a></td>
+<td>data&lt;-&gt;business logic&lt;-&gt;presentation separation (strict relationships)</td>
+</tr>
+<tr>
+<td align="center"><a href="adapter.go">adapter</a></td>
+<td>adapt one interface to another using a white-list</td>
+</tr>
+<tr>
+<td align="center"><a href="bridge.go">bridge</a></td>
+<td>a client-provider middleman to soften interface changes</td>
+</tr>
+<tr>
+<td align="center"><a href="composite.go">composite</a></td>
+<td>encapsulate and provide access to a number of different objects</td>
+</tr>
+<tr>
+<td align="center"><a href="decorator.go">decorator</a></td>
+<td>wrap functionality with other functionality in order to affect outputs</td>
+</tr>
+<tr>
+<td align="center"><a href="facade.go">facade</a></td>
+<td>use one class as an API to a number of others</td>
+</tr>
+<tr>
+<td align="center"><a href="flyweight.go">flyweight</a></td>
+<td>transparently reuse existing instances of objects with similar/identical state</td>
+</tr>
+<tr>
+<td align="center"><a href="front_controller.go">front_controller</a></td>
+<td>single handler requests coming to the application</td>
+</tr>
+<tr>
+<td align="center"><a href="mvc.go">mvc</a></td>
+<td>model&lt;-&gt;view&lt;-&gt;controller (non-strict relationships)</td>
+</tr>
+<tr>
+<td align="center"><a href="proxy.go">proxy</a></td>
+<td>an object funnels operations to something else</td>
+</tr>
+</tbody>
+</table>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p><strong>Behavioral Patterns</strong>:</p>
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<table>
+<thead>
+<tr>
+<th align="center">Pattern</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td align="center"><a href="chain.go">chain</a></td>
+<td>apply a chain of successive handlers to try and process the data</td>
+</tr>
+<tr>
+<td align="center"><a href="catalog.go">catalog</a></td>
+<td>general methods will call different specialized methods based on construction parameter</td>
+</tr>
+<tr>
+<td align="center"><a href="chaining_method.go">chaining_method</a></td>
+<td>continue callback next object method</td>
+</tr>
+<tr>
+<td align="center"><a href="command.go">command</a></td>
+<td>bundle a command and arguments to call later</td>
+</tr>
+<tr>
+<td align="center"><a href="mediator.go">mediator</a></td>
+<td>an object that knows how to connect other objects and act as a proxy</td>
+</tr>
+<tr>
+<td align="center"><a href="memento.go">memento</a></td>
+<td>generate an opaque token that can be used to go back to a previous state</td>
+</tr>
+<tr>
+<td align="center"><a href="observer.go">observer</a></td>
+<td>provide a callback for notification of events/changes to data</td>
+</tr>
+<tr>
+<td align="center"><a href="publish_subscribe.go">publish_subscribe</a></td>
+<td>a source syndicates events/data to 0+ registered listeners</td>
+</tr>
+<tr>
+<td align="center"><a href="registry.go">registry</a></td>
+<td>keep track of all subclasses of a given class</td>
+</tr>
+<tr>
+<td align="center"><a href="specification.go">specification</a></td>
+<td>business rules can be recombined by chaining the business rules together using boolean logic</td>
+</tr>
+<tr>
+<td align="center"><a href="state.go">state</a></td>
+<td>logic is organized into a discrete number of potential states and the next state that can be transitioned to</td>
+</tr>
+<tr>
+<td align="center"><a href="strategy.go">strategy</a></td>
+<td>selectable operations over the same data</td>
+</tr>
+<tr>
+<td align="center"><a href="template.go">template</a></td>
+<td>an object imposes a structure but takes pluggable components</td>
+</tr>
+<tr>
+<td align="center"><a href="visitor.go">visitor</a></td>
+<td>invoke a callback for all items of a collection</td>
+</tr>
+</tbody>
+</table>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/tmrts/awesome-go-patterns">Awesome-go-patterns</a> is maintained by <a href="https://github.com/tmrts">tmrts</a>.</span>
