--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
 
       <section id="main_content">
         <h1>
-<a id="go-patterns---" class="anchor" href="#go-patterns---" aria-hidden="true"><span class="octicon octicon-link"></span></a>Go Patterns <a href="https://github.com/sindresorhus/awesome"><img src="https://img.shields.io/badge/awesome-%E2%9C%93-ff69b4.svg?style=flat-square" alt="Awesome Widget"></a> <a href="http://travis-ci.org/tmrts/go-patterns"><img src="https://img.shields.io/travis/tmrts/awesome-google-cloud.svg?style=flat-square" alt="Travis Widget"></a> <a href="http://creativecommons.org/licenses/by/4.0/"><img src="https://img.shields.io/badge/license-Creative%20Commons%204.0-E91E63.svg?style=flat-square" alt="License Widget"></a>
-</h1>
+<a id="go-patterns" class="anchor" href="#go-patterns" aria-hidden="true"><span class="octicon octicon-link"></span></a>Go Patterns</h1>
 
 <p>A curated collection of common patterns &amp; idioms for Go.</p>
 
