Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -36,24 +36,27 @@
 </thead>
 <tbody>
 <tr>
-<td align="center"><a href="abstract_factory.go">Abstract Factory</a></td>
+<td align="center">TODO: <a href="creational/abstract_factory.md">Abstract Factory</a>
+</td>
 <td>Provides an interface for creating families of releated objects</td>
 </tr>
 <tr>
-<td align="center"><a href="builder/builder.go">Builder</a></td>
+<td align="center">TODO: <a href="creational/builder.md">Builder</a>
+</td>
 <td>Builds a complex object using simple objects</td>
 </tr>
 <tr>
-<td align="center"><a href="factory_method.go">Factory Method</a></td>
+<td align="center">TODO: <a href="creational/factory.md">Factory Method</a>
+</td>
 <td>Defers instantiation of an object to a specialized function for creating instances</td>
 </tr>
 <tr>
-<td align="center"><a href="object_pool/pool.go">Object Pool</a></td>
+<td align="center"><a href="creational/object_pool.md">Object Pool</a></td>
 <td>Instantiates and maintains a group of objects instances of the same type</td>
 </tr>
 <tr>
-<td align="center"><a href="singleton/singleton.go">Singleton</a></td>
-<td>Restricts instantiation of a class to one object</td>
+<td align="center"><a href="creational/singleton.md">Singleton</a></td>
+<td>Restricts instantiation of a type to one object</td>
 </tr>
 </tbody>
 </table>
@@ -69,15 +72,18 @@
 </thead>
 <tbody>
 <tr>
-<td align="center"><a href="adapter.go">Adapter</a></td>
+<td align="center">TODO: <a href="structural/.md">Adapter</a>
+</td>
 <td>Adapts otherwise incompatible interfaces to work together by adapting one to the other</td>
 </tr>
 <tr>
-<td align="center"><a href="bridge.go">Bridge</a></td>
+<td align="center">TODO: <a href="structural/bridge.md">Bridge</a>
+</td>
 <td>Decouples an interface from its implementation so that the two can vary independently</td>
 </tr>
 <tr>
-<td align="center"><a href="composite.go">Composite</a></td>
+<td align="center">TODO: <a href="structural/composite.md">Composite</a>
+</td>
 <td>Encapsulates and provides access to a number of different objects</td>
 </tr>
 <tr>
@@ -85,19 +91,23 @@
 <td>Adds behavior to an object, statically or dynamically</td>
 </tr>
 <tr>
-<td align="center"><a href="facade.go">Facade</a></td>
-<td>Uses one class as an API to a number of others</td>
+<td align="center">TODO: <a href="structural/facade.md">Facade</a>
+</td>
+<td>Uses one type as an API to a number of others</td>
 </tr>
 <tr>
-<td align="center"><a href="flyweight.go">Flyweight</a></td>
+<td align="center">TODO: <a href="structural/flyweight.md">Flyweight</a>
+</td>
 <td>Reuses existing instances of objects with similar/identical state to minimize resource usage</td>
 </tr>
 <tr>
-<td align="center"><a href="mvc.go">Model View Controller</a></td>
+<td align="center">TODO: <a href="structural/model_view_controller.md">Model View Controller</a>
+</td>
 <td>Divides an app into three interconnected parts to separate internal representation from presentation to user</td>
 </tr>
 <tr>
-<td align="center"><a href="proxy.go">Proxy</a></td>
+<td align="center">TODO: <a href="structural/proxy.md">Proxy</a>
+</td>
 <td>Provides a surrogate for an object to control it's actions</td>
 </tr>
 </tbody>
@@ -114,31 +124,37 @@
 </thead>
 <tbody>
 <tr>
-<td align="center"><a href="chain_of_responsibility.go">Chain of Responsibility</a></td>
+<td align="center">TODO: <a href="behavioral/chain_of_responsibility.md">Chain of Responsibility</a>
+</td>
 <td>Avoids coupling a sender to receiver by giving more than object a chance to handle the request</td>
 </tr>
 <tr>
-<td align="center"><a href="command.go">Command</a></td>
+<td align="center">TODO: <a href="behavioral/command.md">Command</a>
+</td>
 <td>Bundles a command and arguments to call later</td>
 </tr>
 <tr>
-<td align="center"><a href="mediator.go">Mediator</a></td>
+<td align="center">TODO: <a href="behavioral/mediator.md">Mediator</a>
+</td>
 <td>Connects objects and acts as a proxy</td>
 </tr>
 <tr>
-<td align="center"><a href="memento.go">Memento</a></td>
+<td align="center">TODO: <a href="behavioral/memento.md">Memento</a>
+</td>
 <td>Generate an opaque token that can be used to go back to a previous state</td>
 </tr>
 <tr>
-<td align="center"><a href="observer.go">Observer</a></td>
+<td align="center"><a href="behavioral/observer.md">Observer</a></td>
 <td>Provide a callback for notification of events/changes to data</td>
 </tr>
 <tr>
-<td align="center"><a href="registry.go">Registry</a></td>
+<td align="center">TODO: <a href="behavioral/registry.md">Registry</a>
+</td>
 <td>Keep track of all subclasses of a given class</td>
 </tr>
 <tr>
-<td align="center"><a href="state.go">State</a></td>
+<td align="center">TODO: <a href="behavioral/state.md">State</a>
+</td>
 <td>Encapsulates varying behavior for the same object based on its internal state</td>
 </tr>
 <tr>
@@ -146,11 +162,13 @@
 <td>Enables an algorithm's behavior to be selected at runtime</td>
 </tr>
 <tr>
-<td align="center"><a href="template.go">Template</a></td>
+<td align="center">TODO: <a href="behavioral/template.md">Template</a>
+</td>
 <td>Defines a skeleton class which defers some methods to subclasses</td>
 </tr>
 <tr>
-<td align="center"><a href="visitor.go">Visitor</a></td>
+<td align="center">TODO: <a href="behavioral/visitor.md">Visitor</a>
+</td>
 <td>Separates an algorithm from an object on which it operates</td>
 </tr>
 </tbody>
@@ -167,19 +185,23 @@
 </thead>
 <tbody>
 <tr>
-<td align="center"><a href="condition_variable.go">Condition Variable</a></td>
+<td align="center">TODO: <a href="synchronization/condition_variable.md">Condition Variable</a>
+</td>
 <td>Provides a mechanism for threads to temporarily give up access in order to wait for some condition</td>
 </tr>
 <tr>
-<td align="center"><a href="mutex/mutex.go">Lock/Mutex</a></td>
+<td align="center">TODO: <a href="synchronization/mutex.md">Lock/Mutex</a>
+</td>
 <td>Enforces mutual exclusion limit on a resource to gain exclusive access</td>
 </tr>
 <tr>
-<td align="center"><a href="monitor.go">Monitor</a></td>
+<td align="center">TODO: <a href="synchronization/monitor.md">Monitor</a>
+</td>
 <td>Combination of mutex and condition variable patterns</td>
 </tr>
 <tr>
-<td align="center"><a href="read_write_lock.go">Read-Write Lock</a></td>
+<td align="center">TODO: <a href="synchronization/read_write_lock.md">Read-Write Lock</a>
+</td>
 <td>Allows parallel read access, but only exclusive access on write operations to a resource</td>
 </tr>
 <tr>
@@ -200,39 +222,46 @@
 </thead>
 <tbody>
 <tr>
-<td align="center"><a href="barrier.go">N-Barrier</a></td>
+<td align="center">TODO: <a href="concurrency/barrier.md">N-Barrier</a>
+</td>
 <td>Prevents a process from proceeding until all N processes reach to the barrier</td>
 </tr>
 <tr>
-<td align="center"><a href="bounded_parallelism/md5.go">Bounded Parallelism</a></td>
-<td>Completes large number of indenpendent tasks with resource limits</td>
+<td align="center"><a href="concurrency/bounded_parallelism.md">Bounded Parallelism</a></td>
+<td>Completes large number of independent tasks with resource limits</td>
 </tr>
 <tr>
-<td align="center"><a href="broadcast.go">Broadcast</a></td>
+<td align="center">TODO: <a href="concurrency/broadcast.md">Broadcast</a>
+</td>
 <td>Transfers a message to all recipients simultaneously</td>
 </tr>
 <tr>
-<td align="center"><a href="coroutine/coroutine.go">Coroutines</a></td>
+<td align="center">TODO: <a href="concurrency/coroutine.md">Coroutines</a>
+</td>
 <td>Subroutines that allow suspending and resuming execution at certain locations</td>
 </tr>
 <tr>
-<td align="center"><a href="generator.go">Generators</a></td>
+<td align="center">TODO: <a href="concurrency/generator.md">Generators</a>
+</td>
 <td>Yields a sequence of values one at a time</td>
 </tr>
 <tr>
-<td align="center"><a href="reactor.go">Reactor</a></td>
+<td align="center">TODO: <a href="concurrency/reactor.md">Reactor</a>
+</td>
 <td>Demultiplexes service requests delivered concurrently to a service handler and dispatches them syncronously to the associated request handlers</td>
 </tr>
 <tr>
-<td align="center"><a href="parallelism/md5.go">Parallelism</a></td>
-<td>Completes large number of indenpendent tasks</td>
+<td align="center"><a href="concurrency/parallelism.md">Parallelism</a></td>
+<td>Completes large number of independent tasks</td>
 </tr>
 <tr>
-<td align="center"><a href="producer_consumer.go">Producer Consumer</a></td>
+<td align="center">TODO: <a href="concurrency/producer_consumer.md">Producer Consumer</a>
+</td>
 <td>Separates tasks from task executions</td>
 </tr>
 <tr>
-<td align="center"><a href="scheduler.go">Scheduler</a></td>
+<td align="center">TODO: <a href="concurrency/scheduler.md">Scheduler</a>
+</td>
 <td>Orchestrates steps to be performed as part of a task</td>
 </tr>
 </tbody>
@@ -254,18 +283,20 @@
 </tr>
 <tr>
 <td align="center"><a href="messaging/fan_out.md">Fan-Out</a></td>
-<td>Distributes tasks amongs workers (e.g. producer)</td>
+<td>Distributes tasks among workers (e.g. producer)</td>
 </tr>
 <tr>
-<td align="center"><a href="futures_promises.go">Futures &amp; Promises</a></td>
-<td>Acts as a place-holder of a result that is initally unknown for synchronization purposes</td>
+<td align="center">TODO: <a href="messaging/futures_promises.md">Futures &amp; Promises</a>
+</td>
+<td>Acts as a place-holder of a result that is initially unknown for synchronization purposes</td>
 </tr>
 <tr>
 <td align="center"><a href="messaging/publish_subscribe.md">Publish/Subscribe</a></td>
 <td>Passes information to a collection of recipients who subscribed to a topic</td>
 </tr>
 <tr>
-<td align="center"><a href="push_pull.go">Push &amp; Pull</a></td>
+<td align="center">TODO: <a href="messaging/push_pull.md">Push &amp; Pull</a>
+</td>
 <td>Distributes messages to multiple workers, arranged in a pipeline</td>
 </tr>
 </tbody>
@@ -282,27 +313,32 @@
 </thead>
 <tbody>
 <tr>
-<td align="center"><a href="bulkhead.go">Bulkheads</a></td>
+<td align="center">TODO: <a href="stability/bulkhead.md">Bulkheads</a>
+</td>
 <td>Enforces a principle of failure containment (i.e. prevents cascading failures)</td>
 </tr>
 <tr>
-<td align="center"><a href="circuitbreaker/circuit_breaker.go">Circuit-Breaker</a></td>
+<td align="center"><a href="stability/circuit_breaker.md">Circuit-Breaker</a></td>
 <td>Stops the flow of the requests when requests are likely to fail</td>
 </tr>
 <tr>
-<td align="center"><a href="deadline.go">Deadline</a></td>
+<td align="center">TODO: <a href="stability/deadline.md">Deadline</a>
+</td>
 <td>Allows clients to stop waiting for a response once the probability of response becomes low (e.g. after waiting 10 seconds for a page refresh)</td>
 </tr>
 <tr>
-<td align="center"><a href="fail_fast.go">Fail-Fast</a></td>
+<td align="center">TODO: <a href="stability/fail_fast.md">Fail-Fast</a>
+</td>
 <td>Checks the availability of required resources at the start of a request and fails if the requirements are not satisfied</td>
 </tr>
 <tr>
-<td align="center"><a href="handshaking.go">Handshaking</a></td>
+<td align="center">TODO: <a href="stability/handshaking.md">Handshaking</a>
+</td>
 <td>Asks a component if it can take any more load, if it can't the request is declined</td>
 </tr>
 <tr>
-<td align="center"><a href="steady_state.go">Steady-State</a></td>
+<td align="center">TODO: <a href="stability/steady_state.md">Steady-State</a>
+</td>
 <td>For every service that accumulates a resource, some other service must recycle that resource</td>
 </tr>
 </tbody>
@@ -319,7 +355,8 @@
 </thead>
 <tbody>
 <tr>
-<td align="center"><a href="timing.go">Timing Functions</a></td>
+<td align="center">TODO: <a href="profiling/timing.md">Timing Functions</a>
+</td>
 <td>Wraps a function and logs the execution</td>
 </tr>
 </tbody>
@@ -336,7 +373,7 @@
 </thead>
 <tbody>
 <tr>
-<td align="center"><a href="idiom/functional_options.md">Functional Options</a></td>
+<td align="center"><a href="idiom/functional-options.md">Functional Options</a></td>
 <td>Allows creating clean APIs with sane defaults and idiomatic overrides</td>
 </tr>
 </tbody>
@@ -353,7 +390,8 @@
 </thead>
 <tbody>
 <tr>
-<td align="center"><a href="">Cascading Failures</a></td>
+<td align="center">TODO: <a href="antipatterns/cascading_failures.md">Cascading Failures</a>
+</td>
 <td>A failure in a system of interconnected parts in which the failure of a part causes a domino effect</td>
 </tr>
 </tbody>
